styling for issues, timeline, info and resources pages; change window width of app; fix bug: header in publish page was being covered by timeline; have new projects come with one milestone being project started along with date of today

--- a/src/styles/issues.css
+++ b/src/styles/issues.css
@@ -47,8 +47,19 @@
   padding: 0 3px;
   position: relative;
   bottom: -6px;
+  cursor: pointer;
 }
 
-#addBtn:hover {
+.archBtn {
+  margin: 5px;
+  cursor: pointer;
+}
+
+#delBtn {
+  margin: 5px 0;
+}
+
+#delBtn:hover {
+  color: red;
   cursor: pointer;
 }
